<resources>
    <string name="app_name">AB Financials</string>
    <string name="title_search">Search</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_stocks">My Stocks</string>
    <string name="title_calculator">Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
