<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_stocks"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_stocks" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_search_black_18dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/baseline_visibility_black_18dp"
        android:title="@string/title_watchlist" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_calculator"
        android:icon="@drawable/baseline_functions_black_18dp"
        android:title="@string/title_calculator" />


</menu>
