<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_stocks">

    <fragment
        android:id="@+id/navigation_stocks"
        android:name="com.example.abfinancials.ui.my_stocks.MyStocksFragment"
        android:label="@string/title_stocks"
        tools:layout="@layout/fragment_my_stocks" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.abfinancials.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_home_to_stockFragment2"
            app:destination="@id/stockFragment2"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.abfinancials.ui.watchlist.WatchlistFragment"
        android:label="@string/title_watchlist"
        tools:layout="@layout/fragment_watchlist" >
        <action
            android:id="@+id/action_navigation_dashboard_to_stockFragment2"
            app:destination="@id/stockFragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calculator"
        android:name="com.example.abfinancials.ui.calculator.CalculatorFragment"
        android:label="@string/title_calculator"
        tools:layout="@layout/calculator_fragment" />
    <fragment
        android:id="@+id/stockFragment2"
        android:name="com.example.abfinancials.ui.stock.StockFragment"
        android:label="StockFragment" >
        <argument android:name="symbol" />
        <action
            android:id="@+id/action_stockFragment2_to_buyFragment"
            app:destination="@id/buyFragment" />
    </fragment>
    <fragment
        android:id="@+id/buyFragment"
        android:name="com.example.abfinancials.ui.buy.BuyFragment"
        android:label="BuyFragment" >
        <argument
            android:name="symbol"
            app:argType="string" />
    </fragment>

</navigation>
